tests/build/cases/widget/malformed_property_attribute.stderr
error: expected square brackets
 --> $DIR/malformed_property_attribute.rs:8:10
  |
8 |         #![allow(inner_attribute)]
  |          ^

error: expected path
 --> $DIR/malformed_property_attribute.rs:9:11
  |
9 |         #[!foo]
  |           ^
